refactor(Race): refactor getWinnerNames()
before:
    1 stream code(using collect make trees)
after:
    2 stream code(get max distance -> filter)